@@ -238,6 +238,8 @@ Bug Fixes
 * GITHUB#15668: Fix UnsupportedOperationException in WeightedSpanTermExtractor by
   implementing getFieldInfos in DelegatingLeafReader. (Simranjeet Singh)
 
+* GITHUB#15590: Fix race and improve performance of HNSW graph building (Viliam Durina)
+
 * GITHUB#15702: Fix Potential NullPointException in BytesRefHash initialization#15702 (tyronecai)
 
 * GITHUB#15731: Fix tessellator failure when a hole is touching another hole in the middle of a segment. In this case
